--- a/index.html
+++ b/index.html
@@ -1027,9 +1027,9 @@
     <div class="hero-text-side">
       <h1>Hello Everyone!!</h1>
       <div class="hero-desc">
-        My name is Arupam Biswas, and I’m a Neuroscience Researcher exploring how the central nervous system heals, adapts, and thrives. My journey began in India and led me to Germany, where I am currently pursuing my doctoral studies. <br><br>
-        Outside of the lab, I love exploring new cuisines, traveling to discover different cultures, and sharing ideas with fellow scientists and enthusiasts. Collaboration and open-mindedness are key to innovation, and I enjoy building bridges across disciplines.<br><br>
-        If you are interested in neurobiology, regenerative medicine, or want to collaborate, feel free to get in touch!
+        My name is Arupam Biswas, and I’m a Neuroscience Researcher exploring how the central nervous system heals, adapts, and thrives. My journey began in India and led me to Germany, where I am currently a PhD student at the <a href="https://idn.biologie.uni-mainz.de/" target="_blank">Institute of Developmental Biology and Neurobiology(iDN)</a>.<br><br>
+        My research focuses on developing models and tools for next-generation therapies using precision-engineered artificial biomaterials to support central nervous system(CNS) regeneration after Traumatic Injuries of the Brain(TBI) or Spinal Cord(SCI), or Neurodegenerative Autoimmune Diseases, such as Multiple Sclerosis(MS).<br><br>
+        Outside of the lab, I love exploring new cuisines, traveling to discover different cultures, and sharing ideas with fellow scientists and enthusiasts. If you are interested in neurobiology, regenerative medicine, or want to collaborate, feel free to get in touch!
       </div>
     </div>
   </section>
@@ -1080,7 +1080,8 @@
           <div class="item-info">
             <h3>PhD Topic: Interactive Biomaterials for Neural Regeneration (InteReg)</h3>
             <p>
-              Traumatic CNS injuries and diseases like MS lead to lasting disability due to poor regenerative capacity. Barriers include glial scarring, inhibitory debris, lack of axonal guidance, and more. My research focuses on developing smart biomaterials and engineered platforms to support neural repair, enhance regeneration, and restore function.
+              Traumatic injuries to the central nervous system (CNS), including brain and spinal cord damage, result in poor regeneration and lasting disability due to multiple barriers: glial scar formation, inhibitory debris, lack of axonal guidance, and inefficient remyelination. Similarly, Multiple Sclerosis (MS) is a chronic autoimmune demyelinating disease where oligodendrocytes are attacked, leading to axonal dysfunction. While early remyelination by OPCs is possible, it declines with disease progression, and no current therapies promote regeneration effectively.<br><br>
+              Our team aims to develop precision-engineered biomaterials to support CNS regeneration in trauma and MS. Aim 1: Design ECM-mimicking materials with bioactive and mechano-responsive properties to deliver pro-regenerative factors (Leads: Walther, Besenius, Jacob, Heine). Aim 2: Create cell-targeted nanocapsules to reprogram cells into repair-promoting phenotypes (Leads: Landfester, Mailänder, Jacob, Papic, Berninger, Weil). Aim 3: Engineer nanomaterials that cross the blood-brain barrier (BBB) (Leads: Landfester, Mailänder, Walther, Waisman). Aim 4: Develop advanced models, including vascularized brain organoids, to test delivery and therapeutic efficacy (Leads: Villiou, Walther, Mishra, Lutz, Berninger, Heine, Jacob).
             </p>
           </div>
         </div>
@@ -1089,7 +1090,7 @@
           <div class="item-info">
             <h3>Master's Thesis: High-Content Screening for neurite growth analyses</h3>
             <p>
-              This work involved developing automated high-content screening methods to evaluate the effect of genetic and pharmacological treatments on neurite outgrowth in cultured neuronal cells. The goal was to identify new strategies to promote neural regeneration.
+              Neurons in the central nervous system (CNS), which includes the spinal cord and brain, project their axons to form essential connections. In mammals, these mature axons lose their intrinsic capacity for regeneration, resulting in permanent functional losses after injury. This makes recovery from spinal cord injuries highly unlikely, underscoring the need for novel therapeutic strategies.<br><br> Research has shown that axon growth is dependent on the transcription of large networks of regeneration-associated genes (RAGs) or pro-growth genes. Activating these genes in adult neurons can stimulate axon regeneration past injury sites. However, with numerous pro-growth transcription factors (TFs) available, identifying an optimal set that promotes axon growth is a significant challenge. <br><br>In this context, in-vitro phenotypic screening becomes critical for evaluating the effects of these TFs on neuronal cells (Venkatesh et al., 2018; Venkatesh et al., 2020). High Content Screening (HCS) has been identified as an effective technique for the large-scale analysis of neuronal cell line morphology. My honours thesis involved developing a rigorous experimental protocol to investigate the impact of altered TF expression on neurite outgrowth. This includes the development of methods to measure various parameters, such as neurites branching, neurite length etc. These findings highlight promising targets for future therapeutic strategies aimed at enhancing axon regeneration and improving recovery from CNS injuries.
             </p>
           </div>
         </div>
@@ -1098,7 +1099,7 @@
           <div class="item-info">
             <h3>Other Research Projects</h3>
             <p>
-              Previous research experiences include work in behavioral neurogenetics, autophagy in cancer, and advanced imaging. Details available upon request or in the Gallery.
+              Details will be available soon.
             </p>
           </div>
         </div>
@@ -1121,39 +1122,39 @@
       <div class="pub-item" data-type="research">
         <div class="pub-dot"></div>
         <div class="pub-content">
-          <div class="pub-title">Smart Biomaterials Enable Rapid Neural Repair</div>
+          <div class="pub-title">Soon Will be Updated</div>
           <div class="pub-meta">
-            <span class="pub-journal"><em>Nature Neuroscience</em></span>
-            <span class="pub-authors"><b>A. Biswas, M. Heine, C. Jacob, H.K. Mishra</b></span>
-            <span class="pub-year"><b>2025</b></span>
-            <span class="pub-details">Vol. 32, Issue 4, pp. 102-110</span>
-            <a class="pub-btn" href="https://doi.org/10.xxxx/nn.2025.12345" target="_blank">DOI</a>
+            <span class="pub-journal"><em>##########</em></span>
+            <span class="pub-authors"><b>########</b></span>
+            <span class="pub-year"><b>#####</b></span>
+            <span class="pub-details">Vol. ##, Issue #, pp. ###-###</span>
+            <a class="pub-btn" href="###########" target="_blank">DOI</a>
           </div>
         </div>
       </div>
       <div class="pub-item" data-type="review">
         <div class="pub-dot"></div>
         <div class="pub-content">
-          <div class="pub-title">Neural Regeneration: Current Trends and Future Prospects</div>
+          <div class="pub-title">Clinicopathology & Molecular Analysis of Diffuse Intrinsic Pontine Glioma(DIPG) in Children - Insights from Past, Present, and Future Directions</div>
           <div class="pub-meta">
-            <span class="pub-journal"><em>Progress in Neurobiology</em></span>
-            <span class="pub-authors"><b>A. Biswas, F. Smith</b></span>
-            <span class="pub-year"><b>2024</b></span>
-            <span class="pub-details">Vol. 89, pp. 455-480</span>
-            <a class="pub-btn" href="https://doi.org/10.xxxx/pn.2024.54321" target="_blank">DOI</a>
+            <span class="pub-journal"><em>Journal for Research in Applied Sciences and Biotechnology</em></span>
+            <span class="pub-authors"><b>Arupam Biswas</b></span>
+            <span class="pub-year"><b>2022</b></span>
+            <span class="pub-details">Vol. 1 No. 4, October Issue, pp. 63-70</span>
+            <a class="pub-btn" href="https://doi.org/10.55544/jrasb.1.4.8" target="_blank">DOI</a>
           </div>
         </div>
       </div>
       <div class="pub-item" data-type="book">
         <div class="pub-dot"></div>
         <div class="pub-content">
-          <div class="pub-title">Handbook of CNS Regeneration</div>
+          <div class="pub-title">Soon will be updated</div>
           <div class="pub-meta">
-            <span class="pub-journal"><em>Springer</em></span>
-            <span class="pub-authors"><b>A. Biswas</b></span>
-            <span class="pub-year"><b>2023</b></span>
-            <span class="pub-details">pp. 1-22, ISBN: 978-3-16-148410-0</span>
-            <a class="pub-btn" href="https://doi.org/10.xxxx/handbook.2023.0001" target="_blank">Read</a>
+            <span class="pub-journal"><em>######</em></span>
+            <span class="pub-authors"><b>#######</b></span>
+            <span class="pub-year"><b>####</b></span>
+            <span class="pub-details">pp. ##-##, ISBN: ###-#-##-#######-#</span>
+            <a class="pub-btn" href="#######" target="_blank">Read</a>
           </div>
         </div>
       </div>
@@ -1166,15 +1167,9 @@
     <h2>Sci-Com</h2>
     <ul class="scicom-list">
       <li>
-        <span class="scicom-title">[Sample Sci-Com Activity 1]</span><br>
+        <span class="scicom-title">Avaiable Soon</span><br>
         <span class="scicom-desc">
-          Presented neuroscience concepts to high school students at Science Day, Mainz (2024).
-        </span>
-      </li>
-      <li>
-        <span class="scicom-title">[Sample Sci-Com Activity 2]</span><br>
-        <span class="scicom-desc">
-          Organized and led “Neuro Night” outreach for the general public at Visva-Bharati.
+          Will Update Soon.
         </span>
       </li>
       <!-- Add more Sci-Com activities as needed -->
