--- a/index.html
+++ b/index.html
@@ -1081,7 +1081,55 @@
             <h3>Docotoral Project Overview: Interactive Biomaterials for Neural Regeneration (InteReg)</h3>
             <p>
               Traumatic injuries to the central nervous system (CNS), including brain and spinal cord damage, result in poor regeneration and lasting disability due to multiple barriers: glial scar formation, inhibitory debris, lack of axonal guidance, and inefficient remyelination. Similarly, Multiple Sclerosis (MS) is a chronic autoimmune demyelinating disease where oligodendrocytes are attacked, leading to axonal dysfunction. While early remyelination by OPCs is possible, it declines with disease progression, and no current therapies promote regeneration effectively.<br><br>
-              Our team aims to develop precision-engineered biomaterials to support CNS regeneration in trauma and MS. Aim 1: Design ECM-mimicking materials with bioactive and mechano-responsive properties to deliver pro-regenerative factors (Leads: Walther, Besenius, Jacob, Heine). Aim 2: Create cell-targeted nanocapsules to reprogram cells into repair-promoting phenotypes (Leads: Landfester, Mailänder, Jacob, Papic, Berninger, Weil). Aim 3: Engineer nanomaterials that cross the blood-brain barrier (BBB) (Leads: Landfester, Mailänder, Walther, Waisman). Aim 4: Develop advanced models, including vascularized brain organoids, to test delivery and therapeutic efficacy (Leads: Villiou, Walther, Mishra, Lutz, Berninger, Heine, Jacob).
+              Our team aims to develop precision-engineered biomaterials to support CNS regeneration in trauma and MS. 
+              <section>
+  <h3>Project Aims</h3>
+  <ul class="aims-list">
+    <li>
+      <strong>Aim 1:</strong>
+      Design ECM-mimicking materials with bioactive and mechano-responsive properties to deliver pro-regenerative factors
+      <span class="aim-leads">(Leads: Walther, Besenius, Jacob, Heine)</span>.
+    </li>
+    <li>
+      <strong>Aim 2:</strong>
+      Create cell-targeted nanocapsules to reprogram cells into repair-promoting phenotypes
+      <span class="aim-leads">(Leads: Landfester, Mailänder, Jacob, Papic, Berninger, Weil)</span>.
+    </li>
+    <li>
+      <strong>Aim 3:</strong>
+      Engineer nanomaterials that cross the blood-brain barrier (BBB)
+      <span class="aim-leads">(Leads: Landfester, Mailänder, Walther, Waisman)</span>.
+    </li>
+    <li>
+      <strong>Aim 4:</strong>
+      Develop advanced models, including vascularized brain organoids, to test delivery and therapeutic efficacy
+      <span class="aim-leads">(Leads: Villiou, Walther, Mishra, Lutz, Berninger, Heine, Jacob)</span>.
+    </li>
+  </ul>
+</section>
+<style>
+.aims-list {
+  margin: 1.2em 0 1.5em 1.2em;
+  padding: 0;
+  list-style-type: disc;
+  color: #232323;
+  font-size: 1.09em;
+  line-height: 1.7;
+}
+.aims-list li {
+  margin-bottom: 0.9em;
+  padding-left: 0.2em;
+}
+.aim-leads {
+  color: #1976d2;
+  font-style: italic;
+  font-size: 0.98em;
+}
+.aims-list strong {
+  color: #0f172a;
+}
+</style>
+            
             </p>
           </div>
         </div>
