--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
       margin: 1.2em 0 1.5em 1.2em;
       padding: 0;
       list-style-type: disc;
-      color: #232323;
+      color: #1e293b;
       font-size: 1.09em;
       line-height: 1.7;
     }
