--- a/index.html
+++ b/index.html
@@ -444,14 +444,22 @@
     .research-section {
       padding: 3rem 1rem 2rem 1rem;
       background: linear-gradient(to right, #f8fafc, #e0f2fe);
-      color: #1e293b;
+      color: #0f172a;
       font-size: 1.19rem;
+    }
+    .research-section h2 {
+    font-size: 2.35rem; /* Slightly increased heading size */
+    font-weight: 700;
+    margin-bottom: 2rem;
+    color: #1976d2; /* Ensures blue heading for contrast */
+    text-align: center;
+    font-family: 'Pacifico', cursive;
     }
     .aims-list {
       margin: 1.2em 0 1.5em 1.2em;
       padding: 0;
       list-style-type: disc;
-      color: #1e293b;
+      color: #0f172a;
       font-size: 1.09em;
       line-height: 1.7;
     }
@@ -465,15 +473,7 @@
       font-size: 0.98em;
     }
     .aims-list strong {
-      color: #0f172a;
-    }
-    .research-section h2 {
-      font-size: 2.25rem;
-      font-weight: 700;
-      margin-bottom: 2rem;
-      color: #0f172a;
-      text-align: center;
-      font-family: 'Pacifico', cursive;
+      color: #1976d2;
     }
     .carousel {
       position: relative;
@@ -511,16 +511,18 @@
       padding: 0 0.3rem;
       max-width: 900px;
       font-family: 'Outfit', 'Montserrat', Arial, sans-serif;
+      color: #0f172a; /* Improved contrast for carousel text */
+      font-size: 1.15rem; /* Increase font size for better readability */
     }
     .carousel-item h3 {
-      font-size: 1.28rem;
+      font-size: 1.32rem;
       margin-bottom: 0.7rem;
       color: #1976d2;
     }
     .carousel-item p {
-      font-size: 1.19rem;
-      line-height: 1.65;
-      color: #475569;
+      font-size: 1.15rem;
+      line-height: 1.75;
+      color: #0f172a;
     }
     .carousel-button {
       position: absolute;
