--- a/index.html
+++ b/index.html
@@ -993,6 +993,74 @@
         min-height: 26px;
         padding: 0.5rem 0.5rem;
       }
+      @media (max-width: 700px) {
+      body { font-size: 0.93rem !important; }
+      .hero-text-side h1 { font-size: 1.18rem !important; }
+      .hero-desc { font-size: 0.96rem !important; }
+      .education-section { font-size: 0.95rem !important; }
+      .ed-title { font-size: 1.28rem !important; }
+      .edu-item { font-size: 0.92rem !important; }
+      .edu-degree { font-size: 1.13rem !important; }
+      .edu-major { font-size: 1.04rem !important; }
+      .edu-year { font-size: 0.98rem !important; }
+      .edu-institute { font-size: 0.98rem !important; }
+      .edu-country { font-size: 0.89rem !important; }
+      .edu-institution, .edu-thesis, .edu-pis { font-size: 0.91rem !important; }
+      .research-section { font-size: 0.97rem !important; }
+      .research-section h2 { font-size: 1.21rem !important; }
+      .aims-list { font-size: 0.91rem !important; }
+      .carousel-item .item-info { font-size: 0.88rem !important; }
+      .carousel-item h3 { font-size: 0.98rem !important; }
+      .carousel-item p { font-size: 0.88rem !important; }
+      .publications-section { font-size: 0.93rem !important; }
+      .publications-section h2 { font-size: 1.13rem !important; }
+      .pub-title { font-size: 0.97rem !important; }
+      .pub-meta, .pub-btn { font-size: 0.88rem !important; }
+      .scicom-section { font-size: 0.96rem !important; }
+      .scicom-section h2 { font-size: 1.12rem !important; }
+      .scicom-title { font-size: 0.94rem !important; }
+      .scicom-desc { font-size: 0.88rem !important; }
+      .gallery-section { font-size: 0.94rem !important; }
+      .gallery-section h2 { font-size: 1.19rem !important; }
+      .caption { font-size: 0.92rem !important; }
+      .get-in-touch, .get-in-touch * { font-size: 0.93rem !important; }
+      .get-in-touch h2 { font-size: 1.01rem !important; }
+      footer { font-size: 0.89rem !important; }
+    }
+    @media (max-width: 400px) {
+      body { font-size: 0.81rem !important; }
+      .hero-text-side h1 { font-size: 0.92rem !important; }
+      .hero-desc { font-size: 0.81rem !important; }
+      .education-section { font-size: 0.78rem !important; }
+      .ed-title { font-size: 0.89rem !important; }
+      .edu-item { font-size: 0.76rem !important; }
+      .edu-degree { font-size: 0.86rem !important; }
+      .edu-major { font-size: 0.81rem !important; }
+      .edu-year { font-size: 0.81rem !important; }
+      .edu-institute { font-size: 0.8rem !important; }
+      .edu-country { font-size: 0.77rem !important; }
+      .edu-institution, .edu-thesis, .edu-pis { font-size: 0.79rem !important; }
+      .research-section { font-size: 0.79rem !important; }
+      .research-section h2 { font-size: 0.85rem !important; }
+      .aims-list { font-size: 0.8rem !important; }
+      .carousel-item .item-info { font-size: 0.75rem !important; }
+      .carousel-item h3 { font-size: 0.81rem !important; }
+      .carousel-item p { font-size: 0.74rem !important; }
+      .publications-section { font-size: 0.76rem !important; }
+      .publications-section h2 { font-size: 0.87rem !important; }
+      .pub-title { font-size: 0.8rem !important; }
+      .pub-meta, .pub-btn { font-size: 0.72rem !important; }
+      .scicom-section { font-size: 0.78rem !important; }
+      .scicom-section h2 { font-size: 0.85rem !important; }
+      .scicom-title { font-size: 0.75rem !important; }
+      .scicom-desc { font-size: 0.71rem !important; }
+      .gallery-section { font-size: 0.78rem !important; }
+      .gallery-section h2 { font-size: 0.87rem !important; }
+      .caption { font-size: 0.77rem !important; }
+      .get-in-touch, .get-in-touch * { font-size: 0.81rem !important; }
+      .get-in-touch h2 { font-size: 0.8rem !important; }
+      footer { font-size: 0.77rem !important; }
+    }
     }
   </style>
 </head>
