--- a/index.html
+++ b/index.html
@@ -1228,6 +1228,7 @@
       <button class="pub-filter" data-filter="research">Research Article</button>
       <button class="pub-filter" data-filter="review">Review Article</button>
       <button class="pub-filter" data-filter="book">Book Chapters</button>
+    <!--
     </div>
     <div class="pub-timeline">
       <div class="pub-item" data-type="research">
@@ -1239,9 +1240,10 @@
             <span class="pub-authors"><b></b></span>
             <span class="pub-year"><b></b></span>
             <span class="pub-details"></span>
-            <a class="pub-btn" href="" target="_blank">DOI</a>
+            <a class="pub-btn" href="" target="_blank"></a>
           </div>
         </div>
+      -->
       </div>
       <div class="pub-item" data-type="review">
         <div class="pub-dot"></div>
@@ -1255,6 +1257,7 @@
             <a class="pub-btn" href="https://doi.org/10.55544/jrasb.1.4.8" target="_blank">DOI</a>
           </div>
         </div>
+        <!--
       </div>
       <div class="pub-item" data-type="book">
         <div class="pub-dot"></div>
@@ -1269,6 +1272,7 @@
           </div>
         </div>
       </div>
+    -->
       <!-- Add more pub-item as needed -->
     </div>
   </section>
