--- a/index.html
+++ b/index.html
@@ -1108,7 +1108,7 @@
 <a class="twitter" href="https://x.com/arupamb07" target="_blank">
 <img alt="X Logo" src="twitterFL.jpg"/>
 </a>
-<a class="gmail" href="mailto:arupambiswas007[at]gmail[dot]com" target="_blank">
+<a class="gmail" href="mailto:arupambiswas007@gmail.com" target="_blank">
 <img alt="Gmail Logo" src="gmail.jpg"/>
 </a>
 </div>
@@ -1252,7 +1252,7 @@
 <span class="pub-journal"><em>Journal for Research in Applied Sciences and Biotechnology</em></span>
 <span class="pub-authors"><b>Arupam Biswas</b></span>
 <span class="pub-year"><b>2022</b></span>
-<span class="pub-details">Vol. 1 No. 4,October Issue, pp. 455-480, ISSN: 2583-4053</span>
+<span class="pub-details">Vol. 1 No. 4,October Issue, pp. 63-70, ISSN: 2583-4053</span>
 <a class="pub-btn" href="https://doi.org/10.55544/jrasb.1.4.8" target="_blank">DOI</a>
 </div>
 </div>
@@ -1338,8 +1338,8 @@
 </section>
 <section class="get-in-touch" id="get-in-touch">
 <h2>Get in Touch</h2>
-<p><strong>Email:</strong> arupambiswas007[at]gmail[dot]com</p>
-<p><strong>Lab:</strong> Prof. Dr. Martin Heine, <span class="lab-highlight">Functional Neurobiology Lab</span> at JGU</p>
+<p><strong>Email:</strong> arupambiswas007@gmail.com</p>
+<p><strong>Lab:</strong> Prof. Dr. Martin Heine, <span class="lab-highlight"><a href="https://fnb-idn.biologie.uni-mainz.de/" target="_blank">Functional Neurobiology Lab</a>Functional Neurobiology Lab</span> at JGU</p>
 <p><strong>Address:</strong><br/>
       Institute for Developmental Biology and Neurobiology (iDN)<br/>
       Johannes Gutenberg University Mainz<br/>
