--- a/index.html
+++ b/index.html
@@ -1339,7 +1339,7 @@
 <section class="get-in-touch" id="get-in-touch">
 <h2>Get in Touch</h2>
 <p><strong>Email:</strong> arupambiswas007@gmail.com</p>
-<p><strong>Lab:</strong> Prof. Dr. Martin Heine, <span class="lab-highlight"><a href="https://fnb-idn.biologie.uni-mainz.de/" target="_blank">Functional Neurobiology Lab</a>Functional Neurobiology Lab</span> at JGU</p>
+<p><strong>Lab:</strong> Prof. Dr. Martin Heine, <a class="lab-highlight" href="https://fnb-idn.biologie.uni-mainz.de/" target="_blank">Functional Neurobiology Lab</a> at JGU</p>
 <p><strong>Address:</strong><br/>
       Institute for Developmental Biology and Neurobiology (iDN)<br/>
       Johannes Gutenberg University Mainz<br/>
