--- a/index.html
+++ b/index.html
@@ -1138,7 +1138,11 @@
 <div class="edu-institute mainz-font"><strong>Johannes Gutenberg University Mainz</strong> <span class="edu-country">| Germany</span></div>
 <div class="edu-institution"><b><i>Institution:</i></b> Institute of Developmental Biology and Neurobiology (iDN)</div>
 <div class="edu-thesis"><b><i>Dissertation Title:</i></b> Interactive Biomaterials for Neural Regeneration(InteReg)</div>
-<div class="edu-pis"><b><i>PIs:</i></b> Prof. Dr. Martin Heine, Prof. Dr. Claire Jacob, Dr. Himanshu Kumar Mishra</div>
+<div class="edu-pis"><b><i>PIs:</i></b> 
+    <a href="https://fnb-idn.biologie.uni-mainz.de/" target="_blank">Prof. Dr. Martin Heine</a>,
+    <a href="https://cnb-idn.biologie.uni-mainz.de/" target="_blank">Prof. Dr. Claire Jacob</a>,
+    <a href="https://cnb-idn.biologie.uni-mainz.de/" target="_blank">Dr. Himanshu Kumar Mishra</a>
+</div>
 </div>
 </div>
 <!-- Visva-Bharati -->
