--- a/index.html
+++ b/index.html
@@ -1139,9 +1139,10 @@
 <div class="edu-institution"><b><i>Institution:</i></b> Institute of Developmental Biology and Neurobiology (iDN)</div>
 <div class="edu-thesis"><b><i>Dissertation Title:</i></b> Interactive Biomaterials for Neural Regeneration(InteReg)</div>
 <div class="edu-pis"><b><i>PIs:</i></b> 
-    <a href="https://fnb-idn.biologie.uni-mainz.de/" target="_blank">Prof. Dr. Martin Heine</a>,
-    <a href="https://cnb-idn.biologie.uni-mainz.de/" target="_blank">Prof. Dr. Claire Jacob</a>,
-    <a href="https://cnb-idn.biologie.uni-mainz.de/" target="_blank">Dr. Himanshu Kumar Mishra</a>
+    
+    <a href="https://fnb-idn.biologie.uni-mainz.de/" target="_blank" style="color: inherit; text-decoration: none;">Prof. Dr. Martin Heine</a>,
+    <a href="https://cnb-idn.biologie.uni-mainz.de/" target="_blank" style="color: inherit; text-decoration: none;">Prof. Dr. Claire Jacob</a>,
+    <a href="https://cnb-idn.biologie.uni-mainz.de/" target="_blank" style="color: inherit; text-decoration: none;">Dr. Himanshu Kumar Mishra</a>
 </div>
 </div>
 </div>
